crates/oxc_css_parser/tests/error/scss/at-rule/use/with-extra-comma.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `,`
  ┌─ with-extra-comma.scss:1:26
  │
1 │ @use "other" with ($a: b,,);
  │                          ^


